welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:12: error: ';' expected but 'while' found.
  } while(!sortieTrouvee()) {
    ^